# ROSA

./: .gitignore  LICENSE  Makefile  README.md
backend/: .pre-commit-config.yaml  pyproject.toml
backend/src/: __init__.py  __main__.py  dependencies.py  models.py  redis_client.py
backend/src/cli/: __init__.py  __main__.py  scanner_manager.py  scanner_mgr.py  session_cleaner.py
backend/src/routes/: __init__.py  config.py  index.py  labels.py  orders.py  sessions.py  websockets.py
backend/src/static/: welcome-screen.html
backend/src/templates/: exchange_ticket_label.html  label.html  nameplate_label.html  nameplate_label_for_volunteer.html
backend/src/utils/hals/: __init__.py
backend/src/utils/hals/printers/: escp.py  tspl.py
backend/src/utils/hals/readers/: qrcode_serial.py
backend/src/utils/renderers/: html_renderer.py
backend/src/utils/stdlibs/: import_utils.py  str_utils.py
frontend/: .env.local  .env.production  eslint.config.js  index.html  package.json  pnpm-lock.yaml  prettier.config.js  tsconfig.app.json  vite.config.ts
frontend/src/: main.tsx  models.ts  vite-env.d.ts
frontend/src/components/elements/: won.tsx
frontend/src/components/layouts/: page.tsx
frontend/src/consts/: globals.ts
frontend/src/hooks/: useAPIs.ts
frontend/src/screens/: deskScreen.tsx  welcomeScreen.tsx
frontend/src/screens/dialogs/: config.tsx  confirm.tsx  error.tsx  index.tsx  loading.tsx  orderClosing.tsx  pocaConnectionLost.tsx  printPreview.tsx  refund.tsx
frontend/src/screens/pages/: deskClosedPage.tsx  orderDetailPage.tsx  orderIdlePage.tsx
frontend/src/utils/: date.ts  form.ts  index.ts  order.ts  string.ts
infra/: Dockerfile  docker-compose.yaml  supervisord.ini
