[tool.poetry]
name = "poca"
version = "0.1.0"
description = ""
authors = ["MU-Software <musoftware@daum.net>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.1"
pydantic = "^2.10.1"
pillow = "^10.4.0"
aiohttp = "^3.11.7"
playwright = "^1.49.0"
websockets = "^12.0"
jinja2 = "^3.1.4"
pyserial = "^3.5"
redis = "^5.2.0"
pydantic-settings = "^2.6.1"
typer = "^0.12.5"
async-lru = "^2.0.4"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.8.0"
pylint = "^3.3.1"
flake8 = "^7.1.1"
mypy = "^1.13.0"
black = "^24.10.0"
bandit = "^1.7.10"
isort = "^5.13.2"
refurb = "^2.0.0"
flake8-noqa = "^1.4.0"
flake8-bugbear = "^24.10.31"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
